Implement ISSUE-004 outlets staff permissions
